--- a/{{ cookiecutter.project_slug }}/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/tasks/main.yml
@@ -1,7 +1,7 @@
 {% raw -%}
 ---
-- name: resolve platform specific vars
-  include_vars: '{{ item }}'
+- name: Resolve platform specific vars
+  ansible.builtin.include_vars: '{{ item }}'
   with_first_found:
     - files:
         - '{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml'
