--- a/{{ cookiecutter.project_slug }}/test.yml
+++ b/{{ cookiecutter.project_slug }}/test.yml
@@ -1,7 +1,8 @@
 ---
-- hosts: all
+- name: Testing {{ cookiecutter.galaxy_fq_name }} role
+  hosts: all
   tasks:
-    - name: Testing {{ cookiecutter.galaxy_fq_name }} role
+    - name: Installing {{ cookiecutter.galaxy_fq_name }}
       ansible.builtin.include_role:
         name: '{% raw %}{{ playbook_dir }}{% endraw %}'
     - name: Executing '{{ cookiecutter.role_name }} --version'
