--- a/{{ cookiecutter.project_slug }}/meta/main.yml
+++ b/{{ cookiecutter.project_slug }}/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   company: '{{ cookiecutter.galaxy_company }}'
   galaxy_tags: []
   license: MIT
-  min_ansible_version: {{ cookiecutter.galaxy_min_ansible_version }}
+  min_ansible_version: '{{ cookiecutter.galaxy_min_ansible_version }}'
   namespace: '{{ cookiecutter.galaxy_org }}'
   platforms:
     - name: Alpine
